k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <YOUR_USERNAME>-myfirst-api-server
  namespace: <YOUR_NAMESPACE>
spec:
  selector:
    app: <YOUR_USERNAME>-myfirst-api-server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: mgmt
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
