k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: <YOUR_USERNAME>-myfirst-ingress
  namespace: <YOUR_NAMESPACE>
spec:
  ingressClassName: public-nginx
  rules:
  - host: <YOUR_INGRESS_HOST>
    http:
      paths:
      - backend:
          service:
            name: <YOUR_USERNAME>-myfirst-api-server
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - '<YOUR_INGRESS_HOST>'
    secretName: <YOUR_USERNAME>-ingress-project-tls-cert
